[package]
name = "toykv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.9.0"
tracing = "0.1.32"
thiserror = "1.0.30"
dashmap = "5.2.0"

[dev-dependencies]
anyhow = "1.0.56"
async-prost = "0.3.0"
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net"] }
tracing-subscriber = "0.3.9"

[build-dependencies]
prost-build = "0.9.0"